# tsl

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/source/: mem_dump.c  mem_dump.h  telnet_serv.c  telnet_serv.h  utils.c  utils.h
test_app/: CMakeLists.txt
test_app/source/: main.c
